# Lavender

./: .clang-format  .gitignore  CMakeLists.txt  COPYING.txt  README.md
.github/workflows/: codeql-analysis.yml
CMake/: CompilerDiagnostics.cmake  Libraries.cmake  PreCompiledHeaders.cmake  Version.cmake
Documentation/: STYLE.md
Legal/: ACKNOWLEDGEMENTS.txt  ACKNOWLEDGMENTS.txt
Resources/: CMakeLists.txt
Resources/Assets/Models/: Dispatcher.gltf  Plane.gltf  Scene.gltf
Resources/Shaders/: CMakeLists.txt  anim_gbuffer.vert  gbuffer.frag  gbuffer.vert  lighting_pass.frag  lighting_pass.vert  lighting_pass_debug.frag  shader.frag  shader.vert
Source/: CMakeLists.txt  GraphicsAPI.cpp  GraphicsAPI.hpp  Lavender.cpp  Lavender.hpp  WinMain.cpp  main.cpp
Source/Base/: About.hpp  ArrayView.hpp  Debug.hpp  Error.cpp  Error.hpp  ErrorOr.hpp  ExitStatus.hpp  Library.hpp  ScopeGuard.hpp  Task.cpp  Task.hpp  Version.hpp
Source/Devices/: CMakeLists.txt  DeviceManager.cpp  DeviceManager.hpp
Source/Devices/Cast/: CastManager.cpp  CastManager.hpp
Source/ECS/: Entity.hpp  EntityList.hpp  Forward.hpp  Node.cpp  Node.hpp  PointLight.hpp  Scene.hpp
Source/Event/: CMakeLists.txt  Cancellable.hpp  Event.hpp  EventHandler.hpp  EventHandlerQueue.hpp  FunctionQueue.cpp  FunctionQueue.hpp
Source/IO/: CMakeLists.txt  Error.hpp  FileInput.cpp  FileInput.hpp
Source/IO/Format/GLTF/: ComponentType.cpp  ComponentType.hpp  Context.cpp  Context.hpp  ImageLoader.cpp  ImageLoader.hpp  ResourceInfo.hpp
Source/IO/Format/Image/: BulkImageLoader.cpp  BulkImageLoader.hpp  ColorModel.hpp  ImageView.hpp  STBImage.cpp
Source/Input/: CMakeLists.txt  Controller.hpp  DragAndDropEvents.hpp  DragObject.hpp  Forward.hpp  KeyboardAction.hpp  KeyboardKey.hpp  KeyboardUpdate.hpp  MouseGrabbed.hpp  MouseUpdate.hpp  ScrollEvent.hpp  StandardCursor.hpp
Source/Input/Bluetooth/: BluetoothManager.hpp  Win32BluetoothDeviceIteration.hpp  Win32BluetoothManager.cpp  Win32BluetoothManager.hpp
Source/Interface/: Camera.hpp  Forward.hpp  FreeCamera.cpp  FreeCamera.hpp
Source/Math/: Math.cpp  Math.hpp  Matrix4x4.cpp  Matrix4x4.hpp  Quaternion.hpp  Size2D.hpp  Transformation.hpp  Vector.hpp
Source/Network/: CMakeLists.txt  CommonAddresses.hpp  CommonPorts.hpp  CommonSocketAddresses.hpp  IPv4Address.hpp  Port.hpp  SocketAddress.hpp
Source/Network/UDP/: Socket.cpp  Socket.hpp
Source/OpenGL/: CMakeLists.txt  DebugMessenger.cpp  DebugMessenger.hpp  GLCore.cpp  GLCore.hpp  GLTFLoader.cpp  GraphicsHandle.hpp  ModelGeometryDescriptor.hpp  OpenGLHelpers.cpp  OpenGLHelpers.hpp  TextureDescriptor.hpp  TextureLoader.cpp  Types.hpp  Utils.cpp  Utils.hpp  Win32Glue.cpp  Win32Glue.hpp
Source/OpenGL/Interface/: ContextAttributes.hpp
Source/OpenGL/Renderer/: AttributeLocations.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  RenderMode.hpp  Renderer.hpp  SkyBoxRenderer.cpp  SkyBoxRenderer.hpp
Source/OpenGL/Resources/: GBuffer.cpp  GBuffer.hpp  RenderQuad.cpp  RenderQuad.hpp  Shader.hpp  ShaderProgram.cpp  ShaderType.hpp  SkinDescriptor.hpp  SkyboxDescriptor.hpp  Uniform.cpp
Source/OpenGL/Shaders/: AnimatedGBufferShader.cpp  AnimatedGBufferShader.hpp  GBufferShader.cpp  GBufferShader.hpp  LightingPassShader.cpp  LightingPassShader.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SkyBoxShader.hpp  Uniform.cpp  Uniform.hpp
Source/OpenGL/Shaders/Debug/: LightingPassDebugShader.cpp  LightingPassDebugShader.hpp
Source/Platform/: CMakeLists.txt  Platform.cpp  Platform.hpp  WinPlatform.cpp  WinPlatform.hpp
Source/Platform/UserInteraction/: AuthenticateEvent.hpp  AuthenticateRequest.hpp  AuthenticateResult.hpp
Source/Platform/Win32/: ConsoleManager.cpp  ConsoleManager.hpp  DirectWindowManager.hpp  DropTarget.cpp  DropTarget.hpp  Input.cpp  Input.hpp  Platform.cpp  Platform.hpp  SystemCommand.hpp  UWP.cpp  UWP.hpp  UndocumentedAPIs.cpp  UndocumentedAPIs.hpp  UserInteraction.hpp  Utilities.cpp  Utilities.hpp  VirtualKey.hpp  WindowNotifications.hpp
Source/Platform/Win32/OLE/: OLE.cpp  OLE.hpp
Source/Resources/: FileResourceLocation.cpp  FileResourceLocation.hpp  GraphicsHandleBase.hpp  MemoryResourceLocation.cpp  MemoryResourceLocation.hpp  ModelDescriptor.hpp  ModelGeometry.hpp  ModelGeometryDescriptor.hpp  ResourceLocateEvent.cpp  ResourceLocateEvent.hpp  ResourceLocation.hpp  SkinDescriptor.hpp  SkyboxDescriptor.hpp  TextureDescriptor.hpp  TextureInput.hpp
Source/Utils/: Version.hpp
Source/Vulkan/: CMakeLists.txt  CustomDispatch.hpp  DestoyGuard.cpp  DestroyGuard.hpp  IncludeVulkan.hpp  Pipeline.cpp  Pipeline.hpp  QueueFamilySet.hpp  SwapChain.cpp  SwapChain.hpp  SwapChainElement.hpp  SwapChainSupportDetails.hpp  VulkanCore.cpp  VulkanCore.hpp
Source/Window/: CMakeLists.txt  Events.hpp  GLFWCore.cpp  GLFWCore.hpp  Options.hpp  Win32Core.cpp  Win32Core.hpp  WindowAPI.cpp  WindowAPI.hpp
Testing/: CMakeLists.txt  Floats.hpp  Include.hpp  Random.hpp
Testing/Math/: Matrix4x4.cpp
